infra/k8s/core-mariadb-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-mariadb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-mariadb
  template:
    metadata:
      labels:
        app: core-mariadb
    spec:
      containers:
        - name: core-mariadb
          image: mariadb
          volumeMounts:
          - name: nerdearla-db-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: nerdearla-db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: core-mariadb-srv
spec:
  selector:
    app: core-mariadb
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
