infra/k8s/home-mongo-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-mongo
  template:
    metadata:
      labels:
        app: home-mongo
    spec:
      containers:
        - name: home-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: home-mongo-srv
spec:
  selector:
    app: home-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
